--- a/DingTalk.SDKTests/DingTalk.SDKTests.csproj
+++ b/DingTalk.SDKTests/DingTalk.SDKTests.csproj
@@ -66,6 +66,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="log4net.config" />
   </ItemGroup>
   <Choose>
