--- a/LoginDemo/LoginDemo.csproj
+++ b/LoginDemo/LoginDemo.csproj
@@ -122,6 +122,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Models\QRScanModel.cs" />
+    <Compile Include="Utils\Base64Util.cs" />
     <Compile Include="Utils\CacheUtil.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -142,7 +144,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Home\" />
     <Folder Include="Views\Login\" />
   </ItemGroup>
